[package]
name = "anchor-bridge"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_bridge"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
# default = ["anchor-debug"]
default = []
anchor-debug = ["anchor-lang/anchor-debug"]

[dependencies]
anchor-lang = "0.5.0"
byteorder = "1.4.3"
sha3 = "0.9.1"
